--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Splunk Data Drivers - F1 2023 Event Guide
+site_name: Splunk Data Drivers - F1 2023
 repo_name: splunk/f1-simulator
 repo_url: https://github.com/splunk/f1-simulator
 edit_uri: edit/main/docs
