--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,6 +39,12 @@ nav:
   #   - Configuration: f1_2023/configuration.md
     #- Game Configuration: f1_2023/game.md
   # - Dashboards: f1_2023/dashboards.md
+  - F1 2025 Collector:
+    - Pre-requisites: f1-2025/index.md
+    - Setup: f1-2025/setup.md
+    - Accessing the Web Interface: f1-2025/ui.md
+    - Configuration: f1-2025/configuration.md
+    - Dashboards: f1-2025/dashboards.md
   - F1 2024 Collector:
     - Pre-requisites: f1_2024/index.md
     - Setup: f1_2024/setup.md
