--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -46,13 +46,13 @@ nav:
     - Configuration: f1-2025/configuration.md
     - Dashboards: f1-2025/dashboards.md
     - Game Configuration: f1-2025/game.md
-  - F1 2024 Collector:
-    - Pre-requisites: f1-2024/index.md
-    - Setup: f1-2024/setup.md
-    - Accessing the Web Interface: f1-2024/ui.md
-    - Configuration: f1-2024/configuration.md
-    - Dashboards: f1-2024/dashboards.md
-    - Game Configuration: f1-2024/game.md
+  # - F1 2024 Collector:
+  #   - Pre-requisites: f1-2024/index.md
+  #   - Setup: f1-2024/setup.md
+  #   - Accessing the Web Interface: f1-2024/ui.md
+  #   - Configuration: f1-2024/configuration.md
+  #   - Dashboards: f1-2024/dashboards.md
+  #   - Game Configuration: f1-2024/game.md
   - F1 2025 Event Guide:
     - Game Configuration:
         - Telemetry: event_guide/telemetry.md
